<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ViewMedication">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="-88dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/vm_medicationExpDateTitle"
                android:layout_width="218dp"
                android:layout_height="44dp"
                android:layout_marginStart="59dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="324dp"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:hint="Expiration Date"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vm_medicationQtyTitle" />

            <TextView
                android:id="@+id/localMedicationTitle"
                android:layout_width="291dp"
                android:layout_height="48dp"
                android:layout_marginStart="184dp"
                android:layout_marginTop="59dp"
                android:layout_marginEnd="184dp"
                android:layout_marginBottom="60dp"
                android:text="View Medication"
                android:textSize="36sp"
                app:layout_constraintBottom_toTopOf="@+id/vm_medicationNameTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/vm_medicationNameTitle"
                android:layout_width="290dp"
                android:layout_height="53dp"
                android:layout_marginStart="59dp"
                android:layout_marginEnd="252dp"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/vm_medicationQtyTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/vm_medicationQtyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="59dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="324dp"
                android:ems="10"
                android:hint="Quantity"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vm_medicationNameTitle" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="217dp"
                android:layout_height="40dp"
                android:layout_marginStart="59dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="325dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vm_medicationExpDateTitle">

                <RadioButton
                    android:id="@+id/pillButton"
                    android:layout_width="69dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Pill" />

                <RadioButton
                    android:id="@+id/liquidButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Liquid" />

            </RadioGroup>

            <TextView
                android:id="@+id/daysTakingText"
                android:layout_width="218dp"
                android:layout_height="31dp"
                android:layout_marginStart="58dp"
                android:layout_marginTop="112dp"
                android:layout_marginEnd="325dp"
                android:text="Days Taking"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="287dp"
                android:src="@android:drawable/star_on"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView6" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="287dp"
                android:src="@android:drawable/star_on"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView7" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="287dp"
                android:src="@android:drawable/star_on"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vm_medicationNameTitle" />

            <CheckBox
                android:id="@+id/fridayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="340dp"
                android:text="Friday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daysTakingText" />

            <CheckBox
                android:id="@+id/mondayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="59dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="Monday"
                app:layout_constraintBottom_toTopOf="@+id/tuesdayCheck"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daysTakingText" />

            <CheckBox
                android:id="@+id/wednesdayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="59dp"
                android:layout_marginTop="8dp"
                android:text="Wednesday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tuesdayCheck" />

            <CheckBox
                android:id="@+id/thursdayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="59dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="450dp"
                android:text="Thursday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wednesdayCheck" />

            <CheckBox
                android:id="@+id/sundayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="333dp"
                android:text="Sunday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saturdayCheck" />

            <CheckBox
                android:id="@+id/saturdayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="323dp"
                android:text="Saturday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fridayCheck" />

            <CheckBox
                android:id="@+id/tuesdayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="59dp"
                android:layout_marginTop="8dp"
                android:text="Tuesday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mondayCheck" />

            <Button
                android:id="@+id/activateMedicationBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="74dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="344dp"
                android:text="Activate Medication"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <Button
                android:id="@+id/deleteMedicationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="92dp"
                android:layout_marginTop="70dp"
                android:text="Delete Medication"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sundayCheck"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/updateMedicationBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginEnd="85dp"
                android:text="Update Medication"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/deleteMedicationButton" />

            <Button
                android:id="@+id/deactivateMedicationBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="345dp"
                android:text="Deactivate Medication"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <ImageView
                android:id="@+id/medicationImage"
                android:layout_width="230dp"
                android:layout_height="246dp"
                android:layout_marginTop="196dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintStart_toStartOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/localMedicationTitle"
                tools:src="@tools:sample/avatars" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>